# Aura

./: CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-LICENSES.txt
include/aura/animation/: animation.hpp  clock_animation.hpp  transition.hpp
include/aura/audio/: sound.hpp  sound_loader.hpp
include/aura/audio/providers/: ffmpeg_audio.hpp  gstreamer_audio.hpp  sdl3_audio.hpp
include/aura/camera/: camera_base.hpp
include/aura/camera/providers/: android_camera.hpp  opencv_camera.hpp  v4l2_camera.hpp
include/aura/clipboard/: clipboard_base.hpp
include/aura/clipboard/providers/: android_clipboard.hpp  sdl3_clipboard.hpp
include/aura/core/: app.hpp  clock.hpp  event_dispatcher.hpp  factory.hpp  module.hpp  object.hpp  window.hpp
include/aura/graphics/: canvas.hpp  color.hpp  context.hpp  context_instructions.hpp  fbo.hpp  image_instruction.hpp  instruction.hpp  scissor_instructions.hpp  shader.hpp  stencil_instructions.hpp  svg.hpp  tesselator.hpp  text_instruction.hpp  texture.hpp  vertex_instructions.hpp
include/aura/image/: image.hpp  image_data.hpp
include/aura/image/providers/: sdl3_image.hpp  stb_image.hpp
include/aura/input/: motion_event.hpp  provider.hpp  recorder.hpp  touch_event.hpp
include/aura/input/postproc/: calibration.hpp  dejitter.hpp  doubletap.hpp  ignorelist.hpp  retain_touch.hpp  tripletap.hpp
include/aura/input/providers/: android_joystick.hpp  hidinput_provider.hpp  mtdev_provider.hpp  probesysfs.hpp  sdl3_input_provider.hpp  tuio_provider.hpp  wacom_provider.hpp
include/aura/lang/: builder.hpp  expression_parser.hpp
include/aura/md/: button.hpp  card.hpp  checkbox.hpp  chips.hpp  color_scheme.hpp  dialog.hpp  divider.hpp  fab.hpp  icon_button.hpp  list.hpp  material_widget.hpp  menu.hpp  navigation_bar.hpp  navigation_drawer.hpp  progress.hpp  radiobutton.hpp  select.hpp  slider.hpp  switch.hpp  tabs.hpp  text.hpp  text_input.hpp  theme.hpp  top_app_bar.hpp  typography.hpp
include/aura/platform/android/: android_events.hpp  android_window.hpp
include/aura/platform/desktop/: desktop_clipboard.hpp  desktop_window.hpp
include/aura/properties/: boolean_property.hpp  color_property.hpp  dict_property.hpp  list_property.hpp  numeric_property.hpp  object_property.hpp  property.hpp  property_binding.hpp  reference_list_property.hpp  string_property.hpp
include/aura/spelling/: spelling_base.hpp
include/aura/spelling/providers/: enchant_spelling.hpp  native_osx_spelling.hpp
include/aura/text/: font_manager.hpp  label.hpp
include/aura/text/providers/: pango_harfbuzz.hpp  sdl3_ttf.hpp  stb_truetype.hpp
include/aura/utils/: atlas.hpp  cache.hpp  factory.hpp  gesture.hpp  logger.hpp  math.hpp  metrics.hpp  parser.hpp  resource_manager.hpp  weak_method.hpp
include/aura/video/: video_base.hpp
include/aura/video/providers/: ffmpeg_video.hpp  gstreamer_video.hpp  sdl3_video.hpp
include/aura/widgets/: accordion.hpp  action_bar.hpp  bubble.hpp  button.hpp  camera.hpp  carousel.hpp  checkbox.hpp  code_input.hpp  color_picker.hpp  dropdown.hpp  effect_widget.hpp  file_chooser.hpp  image.hpp  label.hpp  popup.hpp  progress_bar.hpp  scatter.hpp  screen_manager.hpp  scroll_view.hpp  slider.hpp  spinner.hpp  switch.hpp  tabbed_panel.hpp  text_input.hpp  toggle_button.hpp  video.hpp  vkeyboard.hpp  widget.hpp
include/aura/widgets/behaviors/: button_behavior.hpp  code_navigation_behavior.hpp  compound_selection_behavior.hpp  cover_behavior.hpp  drag_behavior.hpp  emacs_behavior.hpp  focus_behavior.hpp  knspace_behavior.hpp  toggle_button_behavior.hpp  touch_ripple_behavior.hpp
include/aura/widgets/layouts/: anchor_layout.hpp  box_layout.hpp  float_layout.hpp  grid_layout.hpp  layout.hpp  page_layout.hpp  relative_layout.hpp  scatter_layout.hpp  stack_layout.hpp
include/aura/widgets/recycleview/: recycle_data_model.hpp  recycle_layout_manager.hpp  (+2 more)
src/core/: app.cpp  clock.cpp  event_dispatcher.cpp  factory_registration.cpp  object.cpp  window.cpp
src/graphics/: image_instruction.cpp
src/lang/: builder.cpp  expression_parser.cpp
src/widgets/: image.cpp  label.cpp  screen_manager.cpp  scroll_view.cpp  slider.cpp  switch.cpp  text_input.cpp  widget.cpp
src/widgets/behaviors/: toggle_button_behavior.cpp
src/widgets/layouts/: box_layout.cpp  float_layout.cpp  grid_layout.cpp
